--- a/Moshify/css/style.css
+++ b/Moshify/css/style.css
@@ -205,6 +205,11 @@ a {
     white-space: nowrap;
 }
 
+.btn--stretched {
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
+
 .btn--primary {
     background: var(--color-primary);
     color: #fff;
@@ -481,13 +486,70 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+    .testimonial .grid--1x2 {
+        grid-template-columns: auto 1fr;
+    }
 
     .testimonial .quote__text,
     .testimonial .quote__author {
         font-size: 2.4rem;
     }
 
+    .testimonial .quote {
+        margin-bottom: 0;
+    }
+
+    .testimonial .quote__org {
+        margin-bottom: 0;
+    }
+
     .testimonial .quote__text {
         margin-left: 6rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .testimonial.grid--1x2 {
+        grid-template-columns: auto;
+    }
+}
+
+/* Callouts */
+.callout {
+    padding: 4rem;
+    border-radius: 5px;
+}
+
+.callout--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.callout .btn {
+    justify-self: center;
+    align-self: center;
+}
+
+.callout__heading {
+    margin-top: 0;
+    color: #fff;
+}
+
+.callout__content {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .callout .grid--1x2 {
+        grid-template-columns: 1fr auto;
+    }
+
+    .callout .btn {
+        justify-self: start;
+        margin-left: 4rem;
+    }
+
+    .callout__content {
+        text-align: left;
     }
 }
