--- a/Moshify/css/style.css
+++ b/Moshify/css/style.css
@@ -199,6 +199,7 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
     margin: 1rem 0;
+    outline: 0;
     padding: 2rem 3rem;
     text-align: center;
     text-transform: uppercase;
@@ -223,6 +224,13 @@ a {
 .btn--secondary {
     background: var(--color-secondary);
     color: #fff;
+}
+
+.btn .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1.1rem;
+    vertical-align: middle;
 }
 
 .btn--secondary:hover {
@@ -283,17 +291,24 @@ a {
 .input-group .input {
     border: 0;
     flex-grow: 1;
-    padding: 1.5rem 1rem;
+    padding: 1.5rem 2rem;
 }
 
 .input-group .btn {
-    margin: 4px;
-    padding: 2rem 1.5rem;
+    margin: 2px;
+    padding: 2rem 2rem;
+    font-size: 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
     .input {
         font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .input-group .btn {
+        overflow: hidden;
     }
 }
 
@@ -713,5 +728,30 @@ a {
     .hero__content {
         text-align: left;
         align-self: center;
+    }
+}
+
+/* Domain Block */
+.block__domain .input-group {
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 670px;
+}
+
+.block-domain__prices {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .block-domain__prices {
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
 }
