--- a/Moshify/css/style.css
+++ b/Moshify/css/style.css
@@ -15,6 +15,11 @@
     box-sizing: border-box;
 }
 
+::selection {
+    background: var(--color-primary);
+    color: #fff;
+}
+
 /* Typography */
 html {
     font-size: 62.5%;
@@ -45,6 +50,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
+    font-weight: 500;
 }
 
 p {
@@ -135,7 +141,6 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -146,6 +151,7 @@ a {
 .list--tick {
     list-style-image: url(../icons/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -419,6 +425,7 @@ a {
 /* Media Object */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__body {
@@ -637,18 +644,20 @@ a {
     margin-top: 0;
 }
 
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
     color: #fff;
 }
 
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vetical) + 4rem);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
 }
 
 .block--skewed-left {
     padding-bottom: calc(var(--padding-vetical) + 4rem);
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
 
 .container {
@@ -721,10 +730,6 @@ a {
 }
 
 /* Hero Banner */
-.hero {
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-}
-
 .hero__tagline {
     font-size: 2rem;
     color: #b9c3cf;
@@ -804,8 +809,29 @@ a {
     margin-top: 6rem;
 }
 
+
 @media screen and (min-width: 768px) {
     .feature:nth-of-type(even) .feature__content {
         order: 2;
+    }
+}
+
+/* Showcase Block */
+.block-showcase__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase__picture {
+        justify-self: end;
+    }
+
+    .block-showcase__image {
+        width: auto;
+        max-width: 700px;
+    }
+
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
     }
 }
