--- a/Moshify/css/style.css
+++ b/Moshify/css/style.css
@@ -836,3 +836,83 @@ a {
         grid-template-columns: 50% 50%;
     }
 }
+
+/* Footer */
+.footer {
+    background: #232323;
+}
+
+.footer a {
+    color: #777;
+    transition: color 0.2s;
+}
+
+.footer a:hover {
+    color: #fff;
+}
+
+.footer__section {
+    padding: 2rem;
+    border-bottom: 1px solid #393939;
+}
+
+.footer__section .list {
+    margin: 0;
+}
+
+.footer__heading {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.footer__brand {
+    margin-top: 5rem;
+    text-align: center;
+}
+
+.footer__copyright {
+    font-size: 2.1rem;
+    color: #fff;
+    opacity: 0.3;
+}
+
+.footer__image {
+    width: 100%;
+    max-width: 230px;
+}
+
+@media screen and (min-width: 768px) {
+    .footer__grid-section {
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+        /* gap: 4rem 6rem; */
+    }
+
+    .footer .collapsible__chevron {
+        display: none;
+    }
+
+    .footer .collapsible__content {
+        opacity: 1;
+        max-height: 100%;
+        font-size: 1.5rem;
+    }
+
+    .footer__section {
+        border: 0;
+    }
+
+    .footer__brand {
+        order: -1;
+        margin-top: 1rem;
+        justify-self: start;
+        padding-right: 2rem;
+    }
+
+    .footer__heading {
+        font-size: 1.6rem;
+    }
+
+    .footer__copyright {
+        font-size: 1.5rem;
+    }
+}
