--- a/Moshify/css/style.css
+++ b/Moshify/css/style.css
@@ -567,6 +567,10 @@ a {
     color: #fff;
 }
 
+.callout--signup {
+    transform: translateY(5rem);
+}
+
 .callout .btn {
     justify-self: center;
     align-self: center;
@@ -575,6 +579,7 @@ a {
 .callout__heading {
     margin-top: 0;
     color: #fff;
+    font-size: 3rem;
 }
 
 .callout__content {
